# loom

./: .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  SKILL.md  pyproject.toml  requirements-mcp.txt
.claude/: settings.json
agents.d/: loom-integration.md
benchmarks/: conflict_dataset.py  conflict_verifier.py  conflicts.py  conflicts_verified.py  ollama_gaps.py  ollama_gaps_ext_llama3.1_8b.json  ollama_gaps_ext_phi4-mini_latest.json  ollama_gaps_ext_qwen2.5-coder_32b.json  ollama_gaps_ext_qwen3.5_latest.json  ollama_gaps_extend.py  ollama_gaps_llama3.1_8b.json  ollama_gaps_phi4-mini_latest.json  ollama_gaps_qwen3.5_latest.json  ollama_gaps_ref_gpt-oss_latest.json  ollama_gaps_ref_llama3.1_8b.json  ollama_gaps_ref_qwen2.5-coder_32b.json  ollama_gaps_ref_qwen3.5_latest.json  ollama_gaps_refactor.py  query_expansion.py  retrieval.py  retrieval_dataset.py  retrieval_expanded.py  scale.py
docs/: DESIGN-rationale-linkage.md  GETTING_STARTED.md  REQUIREMENTS.md  TEST_SPEC.md  TYPELINK_DESIGN.md  WORKED_EXAMPLE.md
experiments/bakeoff/: EVIDENCE_REPORT.md  FAILURE_AUDIT.md  FINDINGS-bakeoff-v1.md  FINDINGS-bakeoff-v2-cpp-comparison.md  FINDINGS-bakeoff-v2-cpp-executor-falsification.md  FINDINGS-bakeoff-v2-cpp-stub-indexer.md  FINDINGS-bakeoff-v2-cross-language-map.md  FINDINGS-bakeoff-v2-crosssession.md  FINDINGS-bakeoff-v2-flutter-counter.md  FINDINGS-bakeoff-v2-js-no-stub-32b.md  FINDINGS-bakeoff-v2-js-real-lsp-v2.md  FINDINGS-bakeoff-v2-js-real-lsp.md  FINDINGS-bakeoff-v2-js-stub-clean.md  FINDINGS-bakeoff-v2-js-test-refs.md  FINDINGS-bakeoff-v2-milestone7.md  FINDINGS-bakeoff-v2-phaseA.md  FINDINGS-bakeoff-v2-phaseC-inventory.md  FINDINGS-bakeoff-v2-phaseG.md  FINDINGS-bakeoff-v2-pilot.md  (+12 more)
hooks/: README.md  loom_intake.py  loom_pretool.py  settings.sample.json
mcp_server/: README.md  server.py
prompts/: decompose.md  link.md
scripts/: loom  loom_exec
src/: __init__.py  config.py  conflict_verify.py  docs.py  embedding.py  runners.py  services.py  store.py  templates.py  testspec.py  typelink.py
src/loom/templates/python-minimal/files/: .gitignore  pyproject.toml
src/loom/templates/python-minimal/files/tests/: test_smoke.py
tests/: test_cli.py  test_config.py  test_embedding.py  test_hook.py  test_indexers.py  test_indexers_js.py  test_intake.py  test_mcp_resources.py  test_multi_runtime_e2e.py  test_runners.py  test_services.py  test_store.py  test_templates.py  test_typelink.py
website/: bg.js  claim-modal.js  claims.js  index.html  styles.css
(+1269 files in other folders)
