[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ app_name }}"
version = "0.0.1"
description = "{{ description }}"
requires-python = ">={{ python_version }}"
authors = [{ name = "{{ author }}" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
